--- a/src/app/src/main/res/layout/fragment_admin_product.xml
+++ b/src/app/src/main/res/layout/fragment_admin_product.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.AdminPageFragments.AdminProductFragment">
+    tools:context=".View.AdminPageFragments.AdminProductFragment"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -44,9 +45,10 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
         android:src="@drawable/ic_baseline_add_24"
         android:contentDescription="@string/create_product"
         android:layout_margin="16dp" />
 
-</LinearLayout>
+</RelativeLayout>
