--- a/src/app/src/main/res/layout/fragment_admin_product_detail.xml
+++ b/src/app/src/main/res/layout/fragment_admin_product_detail.xml
@@ -46,7 +46,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:textSize="14sp"
-                        android:text="@string/lorem"
+                        android:hint="@string/text_holder"
                         android:gravity="center_vertical"
                         android:paddingHorizontal="2dp"/>
                 </HorizontalScrollView>
@@ -73,7 +73,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:textSize="14sp"
-                        android:text="@string/lorem"
+                        android:hint="@string/text_holder"
                         android:gravity="center_vertical"
                         android:paddingHorizontal="2dp"/>
                 </HorizontalScrollView>
@@ -100,7 +100,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:textSize="14sp"
-                        android:text="@string/lorem"
+                        android:hint="@string/text_holder"
                         android:gravity="center_vertical"
                         android:paddingHorizontal="2dp"/>
                 </HorizontalScrollView>
@@ -127,7 +127,7 @@
                         android:textSize="14sp"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:text="1000"
+                        android:hint="0"
                         android:inputType="number"
                         android:gravity="center_vertical"
                         android:paddingHorizontal="2dp"/>
@@ -155,7 +155,7 @@
                         android:textSize="14sp"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:text="15.00"
+                        android:hint="0"
                         android:inputType="number"
                         android:textColor="#42995C"
                         android:gravity="center_vertical"
@@ -180,7 +180,7 @@
                     android:textSize="14sp"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="@string/lorem"
+                    android:hint="@string/text_holder"
                     android:gravity="center_vertical"
                     android:paddingHorizontal="2dp"/>
             </LinearLayout>
